20130722 peripherals/disk/disk.c: fix disk image corruption after saving UDI
         files (fixes bug #299) (Sergio).
20130819 peripherals/disk/fdd.c: check ready status after loading a disk into
         floppy disk drive (fixes bug #223) (thanks, John Elliott) (Sergio).
20130820 peripherals/disk/upd_fdc.[c|h]: fix overlapped SEEK commands (fixes bug
         #236) (thanks, Fred) (Sergio).
20130820 machines/specplus3.c: look port 1FFDh if paging is disabled (fixes bug
         #265) (Brian Ruthven and Fred).
20130820 peripherals/disk/upd_fdc.c: fix length of data returned by READ_DIAG
         command (fixes bug #300) (thanks, Fred) (Sergio).
20130908 Makefile.am,fuse.c,machines/specplus3.c,menu.c,
         peripherals/disk/{beta.c,disciple.c,opus.c,plusd.c},ui.c,
         ui/Makefile.am,ui/ui.h: generic FDD UI handling cleanup (patch #315)
         (Alex Badea).
20130908 uimedia.c,ui/uimedia.h: add missing files for generic FDD UI handling
         cleanup (more from patch #315) (Alex Badea).
20130908 machines/specplus3.c,peripherals/disk/{beta.c,disciple.c,opus.c,
         plusd.c}: remove unused macros on disk peripherals (Sergio).
20130908 ui/gtk/binary.c: fix bad prototypes for activate signal on GTK UI
         (Sergio).
20130908 man/fuse.1: fix documentation of address syntax used in debugger 
         section (Sergio).
20130910 uimedia.c,ui/uimedia.h: add missing subversion properties (Sergio).
20130914 debugger/{debugger.h,disassemble.c},ui/gtk/{debugger.c,gtkinternals.h,
         gtkui.c}: improve scrolling of disassembly list on GTK UI (patch #316)
         (Sergio).
20130914 debugger/debugger.h,ui/gtk/gtkui.c: ensure exiting on GTK UI when there
         are active breakpoints (fixes bug #301) (Sergio).
20130914 ui/win32/debugger.c: improve scrolling of disassembly list on win32 UI
         (Sergio).
20130914 ui/gtk/gtkui.c: make mousewheel scrolling on memory browser GTK+ 3.4
         compatible and keep the selected row. (Sergio).